--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -1,3 +1,7 @@
+@import './LESS/variables';
+@import './mixins';
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic,900');
+
 .carousel {
   .width-100();
   .flex(center, center);
